--- a/README.adoc
+++ b/README.adoc
@@ -41,6 +41,7 @@ Atom – instalujemy pakiety ułatwiające programowanie w C.
 |kbd:[shift+cmd+l]           | split selections into lines
 |kbd:[shift+alt+right/left]  | select to next/previous word
 |kbd:[shift+cmd+right/left]  | select to end/beginning line
+|kbd:[alt+q]                 | reflow paragraph
 |kbd:[ctrl+cmd+space]        | select emoji
 |===
 
