--- a/README.adoc
+++ b/README.adoc
@@ -65,8 +65,7 @@ for ext in $extensions; do code --install-extensions $ext; done
 
 ## Algorytmy, struktury danych
 
-* http://numerical.recipes[Numerical Recipes]
-  in C – the Art of Scientific Computing.
+* http://www.nrbook.com/a/bookcpdf.html[Numerical Recipes in C].
 * JL Bentley, MD McIlroy.
   http://cs.fit.edu/~pkc/classes/writing/samples/bentley93engineering.pdf[Engineering a Sort Function].
 * https://github.com/jwasham/google-interview-university[Google Interview University] – lista zadań
